--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ html {
 body {
   font-family: "Segoe UI", Arial;
   /* background: rgb(80, 80, 80); */
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
